--- a/.github/workflows/deployStorageAccount.yml
+++ b/.github/workflows/deployStorageAccount.yml
@@ -16,6 +16,7 @@ jobs:
       # Deploy ARM template
     - name: Run ARM deploy
       uses: azure/arm-deploy@v1
+      id: deploy
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
@@ -23,5 +24,5 @@ jobs:
         parameters: storageAccountType=Standard_LRS
 
       # output containerName variable from template
-    - run: echo ${{ steps.deploy.outputs.containerName }}
+    - run: echo ${{ steps.deploy.outputs.storageAccountName }}
       
