--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,6 +1,8 @@
 name: GitHub Action to deploy ARM storage template
 
-on: workflow_dispatch
+on: 
+ push:
+   branches: [dev]
 
 jobs:
   build-and-deploy:
