--- a/.github/workflows/deployStorageAccount.yml
+++ b/.github/workflows/deployStorageAccount.yml
@@ -1,5 +1,10 @@
-on: [push]
-name: Azure ARM
+name: Main branch Azure ARM workflow
+
+on: 
+ push:
+  branches: [ main ]
+  
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
