--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,8 +1,8 @@
-name: GitHub Action to deploy ARM storage template
+name: Dev branch to deploy ARM storage template
 
 on: 
  push:
-   branches: [dev]
+   branches: [ dev ]
 
 jobs:
   build-and-deploy:
