--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,6 +3,8 @@ name: Dev branch to deploy ARM storage template
 on: 
  push:
    branches: [ dev ]
+   paths-ignore: 
+   - '.github/**'
 
 jobs:
   build-and-deploy:
