--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,7 +27,7 @@ jobs:
       uses: azure/login@v1.1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-        enable-AzPSSession: 'true'
+        enable-AzPSSession: true
         
     - name: Check ARM Template integretiy
       uses: azure/powershell@v1
