--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build:
-    name: Deploy ARM template
+    name: Build and Check ARM template
     runs-on: windows-2019
     
     steps:
@@ -56,12 +56,12 @@ jobs:
        name: ARM Template
        path: ARMArtifacts/
 
-    deploy:
-        name: Deploy ARM template
-        runs-on: ubuntu-latest
-        needs: build
+  deploy:
+      name: Deploy ARM template
+      runs-on: ubuntu-latest
+      needs: build
         
-        steps:
+      steps:
         - name: Create ARM Template Artifacts folder
           run: |
            mkdir ARMArtifacts
